--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<% if user_signed_in? %>
+	<h1>Hello, <%= current_user.email %></h1>
+<% else %>
+<h1>Hello</h1>
+<% end %>
