--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>First time working with branches!</h1>
-<p>Rafa is right, fixing the issue.</p>
+<div class="container">
+	<h1>First time working with branches!</h1>
+	<p>Rafa is right, fixing the issue.</p>
+
+	<div class="btn btn-primary">Sign up!</div>
+</div>
